tests/neg/nopredef.scala
//> using options -Yno-predef
object Test {
  assert("asdf" == "asdf") // error: not found assert
}
